# gdlf

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  gdlf
services/rules-svc/: CLAUDE.md  Dockerfile  pyproject.toml
services/rules-svc/addons/: mitm_capture.py
services/rules-svc/src/gdlf/: adguard.py  aggregates.py  alerts.py  api_activity.py  api_android_mdm.py  api_auth.py  api_devices.py  api_kids.py  api_mdm.py  api_resources.py  api_rules.py  api_services.py  api_settings.py  api_shortlinks.py  api_stats.py  api_tls_failures.py  api_windows_mdm.py  auth.py  browsers.py  bulk_cdns.py  db.py  dto.py  main.py  pubsub.py  rules.py  schema.py  settings.py  store.py  wg.py
services/rules-svc/src/gdlf/amapi/: __init__.py  client.py  enrollment.py  enterprise.py  orchestrator.py  policy.py
services/rules-svc/src/gdlf/mdm/: __init__.py  apns.py  checkin.py  commands.py  enrollment.py  identity.py  orchestrator.py  profiles.py  server.py
services/rules-svc/src/gdlf/windows_mdm/: __init__.py  package.py  scripts.py  wireguard_conf.py
services/rules-svc/static/: app.css
services/rules-svc/templates/: _activity_rows.html  activity.html  base.html  device_enrol.html  device_new.html  kid_detail.html  kids_index.html  login.html  rule_new.html  rules_index.html  settings.html
services/rules-svc/tests/: conftest.py  test_ingest.py
services/rules-svc/web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
services/rules-svc/web/src/: main.tsx  routeTree.gen.ts
(+56 files in other folders)
