[project]
name = "gdlf-rules-svc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "ruamel.yaml>=0.18",
    "sqlmodel>=0.0.22",
    "apscheduler>=3.10",
    "httpx>=0.28",
    "filelock>=3.16",
    "watchfiles>=0.24",
    "qrcode[pil]>=8.0",
    "cryptography>=43.0",
    "sse-starlette>=2.1",
    "tldextract>=5.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
